Wed Apr 30 15:48:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/binary_test.c:
	- use SQL_LONGVARBINARY, not SQL_BINARY
	* src/tds/query.c:
	- improve dynamic (pass param name for parameter definition)
	* src/tds/unittests/dynamic1.c: fix and update

Wed Apr 30 15:12:16 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/odbc/odbc.c src/tds/query.c:
	- improve dynamic query (not finished)
	- server types enum

Wed Apr 30 10:59:10 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: flags update

Wed Apr 30 10:45:05 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/sql2tds.c src/tds/convert.c:
	- more support for XSYB* type
	* src/tds/query.c:
	- use server type to send data, not client

Wed Apr 30 08:07:54 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: temporary workaround for tds8

Tue Apr 29 22:01:34 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/sql2tds.c: fix core

Tue Apr 29 21:36:49 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/odbc/odbc_util.h:
	* src/odbc/sql2tds.c src/odbc/sql2tds.h:
	- avoid converting from odbc datatype -> odbc c datatype -> server 
	  type (this cause some problems like SQL_LONGVARCHAR -> SYBVARCHAR
	  instead of SQL_LONGVARCHAR -> SYBIMAGE)
	* src/odbc/unittests/binary_test.c:
	- small fix, set textsize to avoid truncating
	* src/tds/query.c:
	- fix blob in mssql, some comment added

Tue Apr 29 20:52:25 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/odbc_util.c:
	- some comment, improve binary
	* src/tds/query.c:
	- small optimization for TDS8

Tue Apr 29 12:03:58 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/binary_test.c(added):
	- add test for binary data from Gerhard Esterhuizen
