@@ -1,3 +1,8 @@
+Wed Apr 30 17:28:26 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c src/tds/query.c:
+	- continue on dynamic work
+	  (now I have some problem for garbage coming from server)
+
 Wed Apr 30 15:48:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/unittests/binary_test.c:
 	- use SQL_LONGVARBINARY, not SQL_BINARY
